# ui

./: .dockerignore  .env  Dockerfile  README.md  app.vue  compose.yaml  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  template.env  tsconfig.json
.github/workflows/: azure-static-web-apps-black-cliff-0bfb39d10.yml
components/: AgGrid.vue
config/: duckdb.ts  paths.ts  redis.ts
data/: plz.csv
fastapi/: .dockerignore  .gitignore  Dockerfile  app.py  db.py  pyproject.toml  template.env
fastapi/data/: example.db
fastapi/helpers/: cacher.py  geo.py  schedule_logger.py
fastapi/models/: geo.py  prices.py
fastapi/routers/: debug.py  prices.py  recommendations.py  schedules.py  stations.py
fastapi/schedules/: __init__.py  historic_prices.py  stations.py  update_git.py
fastapi/services/: prices.py  scheduler.py
fastapi/tests/: test_apis.py  test_geo.py  test_price_comparison.py
helpers/: openingTimes.ts
nginx/: Dockerfile  nginx.conf
nuxt/: Dockerfile  app.vue  package-lock.json  package.json
nuxt/api/: tk.ts
nuxt/config/: constants.ts  paths.ts  redis.ts
nuxt/data/: plz.json
nuxt/helpers/: plz.ts
nuxt/pages/: map.vue  stations.vue
nuxt/scripts/: testDuckDb.js
nuxt/server/api/: currentPricesAtPostCode.get.ts  stations.get.ts
nuxt/types/: currentPrices.ts  plz.ts  stations.ts
pages/: about.vue  index.vue  map.vue  stations.vue
server/api/: currentPricesAtPostCode.get.ts  plz.get.ts  stations.get.ts
server/middleware/: duckdb.ts
tests/: openingTimes.test.ts
types/: stations.ts
webapp_v2/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
webapp_v2/src/: App.vue  main.ts
webapp_v2/src/api/: currentPrices.ts  stations.ts
webapp_v2/src/assets/: base.css  main.css
webapp_v2/src/components/: MainSearchView.vue
webapp_v2/src/components/basic/: dropdown.vue  gpvAutocomplete.vue  gpvDropdown.vue
webapp_v2/src/config/: envVars.ts
webapp_v2/src/helper/: fetchHelper.ts  geoHelper.ts  stringHelper.ts
webapp_v2/src/router/: index.ts
webapp_v2/src/stores/: userSettings.ts
webapp_v2/src/types/: currentPrices.ts  stations.ts
webapp_v2/src/views/: HomeView.vue  ImpressumView.vue
